# tussi

./: .gitignore  .md  CWE_ARCH_ANALYSIS.md  GKE_DEPLOYMENT_PLAN.md  NETWORK_SEGMENTATION_GUIDE.md  PERFORMANCE_ANALYSIS.md  README.md  VULNERABILITIES.md  cloudbuild-explanation.md  cloudbuild.yaml  cwe-software-arch.md  cwe-software-development.md  decomposition.mermaid  deploy.mermaid  docker-compose.yml  generate-ssl.sh  package-lock.json  presentation-instructions.md  presentation.html  products_dump.sql  run_performance_and_generate_graph.sh  spof.md  test.sh
api-gateway/: .dockerignore  Dockerfile  package-lock.json  server.js
frontend/: .dockerignore  .env.development  .env.local  .env.production  Dockerfile  PRODUCTION-DOCKER-PIPELINE.md  README-docker-compose.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
services/auth-service/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
services/auth-service/app/: main.py  schemas.py
services/auth-service/app/controllers/: auth.py
services/auth-service/app/models/: user.py
services/auth-service/app/services/: auth_service.py
services/products-api/: Dockerfile  package-lock.json  pyproject.toml
services/products-api/app/: main.py  messaging.py  projector.py
services/products-api/app/db/: database.py  read_db.py
services/products-api/app/models/: product.py
services/products-api/app/routers/: products_router.py
services/products-api/app/schemas/: product_schema.py
services/products-api/app/services/: products_query_service.py  products_service.py
services/products-api/tests/: test_products.py
(+100 files in other folders)
